# course-artgonzalezacc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vs-code-ext.md  windows.md
src/examples/: CMakeLists.txt
src/examples/00_hello_world/: CMakeLists.txt  main.cpp
src/examples/01_data_types/01_int/: CMakeLists.txt  int.cpp  int.h  main.cpp
src/examples/01_data_types/02_decimals/: CMakeLists.txt  decimals.cpp  decimals.h  main.cpp
src/examples/01_data_types/03_auto/: CMakeLists.txt  auto.cpp  main.cpp
src/examples/01_data_types/04_char/: CMakeLists.txt  char.cpp  char.h  main.cpp
src/examples/01_data_types/05_string/: CMakeLists.txt  main.cpp
src/examples/02_expressions/01_expressions/: CMakeLists.txt  expressions.cpp  expressions.h
src/examples/02_expressions/02_casting/: CMakeLists.txt  casting.cpp  casting.h  main.cpp
src/examples/02_expressions/03_overflow/: CMakeLists.txt  main.cpp  overflow.cpp  overflow.h
src/examples/02_expressions/04_constants/: CMakeLists.txt  constants.cpp  constants.h
src/examples/02_expressions/05_data_type_size/: CMakeLists.txt  data_type_size.cpp  data_type_size.h
src/examples/02_expressions/06_multi_assign/: CMakeLists.txt  multi_assign.cpp  multi_assign.h
src/examples/03_conditionals/: CMakeLists.txt
src/examples/03_conditionals/01_if/: CMakeLists.txt  if.cpp  if.h  main.cpp
src/examples/03_conditionals/02_if_else/: CMakeLists.txt  if_else.cpp  if_else.h
src/examples/03_conditionals/03_if_else_if/: CMakeLists.txt  if_else_if.cpp  if_else_if.h  main.cpp
src/examples/03_conditionals/04_switch/: CMakeLists.txt  main.cpp  switch.cpp  switch.h
src/examples/04_repetition/01_while/: CMakeLists.txt  main.cpp  while.cpp  while.h
src/examples/04_repetition/02_for/: CMakeLists.txt  for.cpp  for.h  main.cpp
src/examples/04_repetition/03_do_while/: CMakeLists.txt  do_while.cpp  do_while.h  main.cpp
src/examples/05_functions/01_void/: CMakeLists.txt  main.cpp  void.cpp  void.h
src/examples/05_functions/02_references/: CMakeLists.txt  main.cpp
src/examples/05_functions/03_val_ref_params/: CMakeLists.txt  main.cpp  val_ref.cpp  val_ref.h
src/examples/05_functions/04_static/: CMakeLists.txt  static.cpp  static.h
src/examples/05_functions/05_default_params/: CMakeLists.txt  default.cpp  default.h
src/examples/06_strings/01_create/: CMakeLists.txt  main.cpp
src/examples/06_strings/02_functions/: CMakeLists.txt  function_str.cpp  function_str.h
src/examples/10_arrays/: CMakeLists.txt
src/homework/06_tic_tac_toe/: CMakeLists.txt  main.cpp  tic_tac_toe.h  tic_tac_toe_3.cpp  tic_tac_toe_4.cpp
test/examples/10_arrays/: CMakeLists.txt
test/homework/: CMakeLists.txt
test/homework/01_data_types/: 01_data_types_tests.cpp  CMakeLists.txt
test/homework/02_expressions/: 02_expressions_tests.cpp  CMakeLists.txt
test/homework/03_decisions/: 03_decisions_tests.cpp  CMakeLists.txt
test/homework/04_repetition/: 04_iteration_tests.cpp  CMakeLists.txt
test/homework/05_functions/: 05_functions_tests.cpp  CMakeLists.txt
test/homework/06_tic_tac_toe/: CMakeLists.txt
test/homework/07_arrays/: CMakeLists.txt
test/homework/08_memory/: 08_memory_tests.cpp  CMakeLists.txt
test/homework/09_recursion/: CMakeLists.txt
test/homework/10_algorithm/: CMakeLists.txt
(+148 files in other folders)
