ADD_SUBDIRECTORY(00_hello_world)
ADD_SUBDIRECTORY(01_data_types)
ADD_SUBDIRECTORY(02_expressions)
ADD_SUBDIRECTORY(03_conditionals)
ADD_SUBDIRECTORY(04_repetition)
ADD_SUBDIRECTORY(05_functions)
ADD_SUBDIRECTORY(06_strings)
ADD_SUBDIRECTORY(07_vector)
ADD_SUBDIRECTORY(08_classes)
ADD_SUBDIRECTORY(09_files)
ADD_SUBDIRECTORY(10_arrays)
ADD_SUBDIRECTORY(11_memory)
ADD_SUBDIRECTORY(12_recursion)
ADD_SUBDIRECTORY(13_intro_algorithm)
